Updated Crawler with Fixed, Virtual and Platform threads